--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>War Strategy & Conflict: WW3</title>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This site is hosted on Netlify.</p>
+    <h1>Welcome to War Strategy & Conflict: WW3 site</h1>
+    <p>All information ubout game apdates is in our Facebook</p>
 </body>
 </html>
