--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+Я оновив ваш файл `index.html`, додавши кнопку для App Store поруч із кнопкою для Google Play.
+
+Я вніс такі зміни:
+
+  * Створив новий клас `.store-buttons` для контейнера, щоб зручно розмістити кнопки.
+  * Змінив стилі `.btn-download` на `.store-button` та додав стилі для кнопок кожного магазину (з використанням відповідних логотипів).
+  * Використав `flexbox` для кнопок, щоб вони були розташовані поруч і їх було легко центрувати.
+  * Додав нові стилі в блок `<style>` для оформлення кнопок.
+
+Ось оновлений код вашого сайту:
+
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -112,21 +124,47 @@
         a:hover {
             text-decoration: underline;
         }
-        .btn-download {
-            display: inline-block;
-            background-color: #27ae60; /* Green for download button */
-            color: white;
-            padding: 15px 30px;
+        /* Нові стилі для кнопок магазинів */
+        .store-buttons {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-top: 30px;
+            margin-bottom: 30px;
+        }
+        .store-button {
+            display: inline-flex;
+            align-items: center;
+            padding: 12px 25px;
             text-transform: uppercase;
             font-weight: bold;
             border-radius: 8px;
-            margin-top: 30px;
-            font-size: 1.2em;
-            transition: background-color 0.3s ease, transform 0.2s ease;
+            font-size: 1.1em;
+            transition: transform 0.2s ease, background-color 0.3s ease;
+            text-decoration: none;
+            color: white;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.3);
         }
-        .btn-download:hover {
-            background-color: #2ecc71; /* Lighter green on hover */
+        .store-button:hover {
             transform: scale(1.05);
+        }
+        .store-button img {
+            height: 24px;
+            margin-right: 10px;
+        }
+        .play-store {
+            background-color: #4285F4; /* Google Play blue */
+        }
+        .play-store:hover {
+            background-color: #3b76d9;
+        }
+        .app-store {
+            background-color: #000; /* Apple Black */
+        }
+        .app-store:hover {
+            background-color: #333;
         }
         .social-links {
             margin-top: 30px;
@@ -184,9 +222,12 @@
                 padding: 15px;
                 margin: 0 15px 30px 15px; /* Add horizontal margin on smaller screens */
             }
-            .btn-download {
-                padding: 12px 25px;
-                font-size: 1.1em;
+            .store-buttons {
+                flex-direction: column; /* Кнопки одна під одною на маленьких екранах */
+            }
+            .store-button {
+                width: 80%; /* Кнопки розтягнуті на всю ширину */
+                justify-content: center; /* Текст та іконка по центру */
             }
             .social-links a {
                 font-size: 1.2em;
@@ -208,6 +249,17 @@
         <p>Rewrite history and lead your nation in this epic WW3 simulator and WW2-inspired sandbox strategy game!</p>
         <p>Step into the role of a leader and guide any country to glory or ruin. Experience a grand strategy simulator that blends RTS, diplomacy, and sandbox gameplay. Will you achieve victory through military dominance, tactical alliances, or strategic development? The choice is yours!</p>
 
+        <div class="store-buttons">
+            <a href="https://play.google.com/store/apps/details?id=com.Zoroplay.GlobalGenesis" target="_blank" class="store-button play-store">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Google Play">
+                Get it on Google Play
+            </a>
+            <a href="https://apps.apple.com/us/app/war-strategy-conflict-ww3/id6749019142" target="_blank" class="store-button app-store">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Download_on_the_App_Store_Badge.svg" alt="App Store">
+                Download on the App Store
+            </a>
+        </div>
+        
         <h2>🔥 Game Features 🔥</h2>
         <h3>💼 Country Management</h3>
         <ul>
@@ -254,8 +306,6 @@
         </ul>
 
         <p>Expand your influence not only through military power but also through wise governance and technological progress. Evolving world map filled with opportunities and unexpected twists.</p>
-
-        <a href="https://play.google.com/store/apps/details?id=com.Zoroplay.GlobalGenesis" target="_blank" class="btn-download">Download on Google Play!</a>
     </div>
 
     <div class="social-links">
@@ -276,3 +326,4 @@
 
 </body>
 </html>
+```
