fix terms link name

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         <p>Contact: <a href="mailto:vionogames@gmail.com">vionogames@gmail.com</a></p>
         <div class="footer-links">
             <a href="https://war-strategy-conflict.com/privacy-policy.html" target="_blank">Privacy Policy</a> |
-            <a href="https://war-strategy-conflict.com/terms-of-us.html" target="_blank">Terms of Use</a>
+            <a href="https://war-strategy-conflict.com/terms-of-use.html" target="_blank">Terms of Use</a>
         </div>
         <p>&copy; 2025 Viono. All rights reserved.</p>
     </footer>
