--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hegemon - War Strategy Game (WW3, Diplomacy & Economy)</title>
-  <link rel="icon" href="images/512gameIcon.png" type="image/png" />
+
+  <!-- New favicon -->
+  <link rel="icon" href="images/MacArtur_Icon_512.jpg" type="image/jpeg" />
+
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Orbitron:wght@700&display=swap" rel="stylesheet">
 
   <style>
@@ -78,6 +81,7 @@
       color:#fff;
     }
 
+    /* New icon */
     .game-icon{
       width:120px;
       height:120px;
@@ -86,6 +90,7 @@
       box-shadow:0 0 15px rgba(243,156,18,0.7);
       margin-bottom:16px;
       background:rgba(0,0,0,0.15);
+      object-fit:cover;
     }
 
     h2{
@@ -138,10 +143,7 @@
       text-decoration:none;
       font-weight:bold;
     }
-
-    a:hover{
-      text-decoration:underline;
-    }
+    a:hover{ text-decoration:underline; }
 
     /* Store buttons */
     .store-buttons{
@@ -175,6 +177,7 @@
 
     .play-store{ background-color:#4285F4; }
     .app-store{ background-color:#000; }
+    .steam-store{ background-color:#1b2838; } /* Steam-ish */
     .community-btn{ background-color:#8e44ad; }
 
     /* Social icon buttons */
@@ -238,7 +241,6 @@
     }
     .footer-links a:hover{ color:var(--muted); }
 
-    /* Responsive */
     @media (max-width:768px){
       .hero-banner{ height:260px; }
       .hero-content h1{ font-size:2.5em; }
@@ -256,7 +258,8 @@
 <body>
   <div class="hero-banner">
     <div class="hero-content">
-      <img src="images/512gameIcon.png" alt="Hegemon Game Icon" class="game-icon">
+      <!-- New icon here -->
+      <img src="images/MacArtur_Icon_512.jpg" alt="Hegemon Game Icon" class="game-icon">
       <h1>HEGEMON</h1>
       <p>War Strategy Game with Diplomacy, Economy & Global Conflict (1960 • 1990 • 2025)</p>
     </div>
@@ -281,9 +284,17 @@
         </div>
       </a>
 
+      <!-- Steam (temporarily points to Steam store; replace with your game's Steam URL when ready) -->
+      <a href="https://store.steampowered.com/" target="_blank" class="store-button steam-store" aria-label="Hegemon on Steam (coming soon)">
+        <div>
+          <small>COMING SOON ON</small>
+          <span>Steam</span>
+        </div>
+      </a>
+
       <a href="community.html" class="store-button community-btn" aria-label="Open Hegemon community hub">
         <div>
-          <small>JOIN THE</small>
+          <small>OPEN</small>
           <span>Community Hub</span>
         </div>
       </a>
@@ -321,27 +332,13 @@
       <li>Multiple eras now — and more historical epochs planned.</li>
     </ul>
 
-    <h2>🎯 Why Players Love It 🎯</h2>
-    <ul>
-      <li><strong>Grand Strategy Depth:</strong> war, diplomacy, economy, and long-term planning.</li>
-      <li><strong>Replayability:</strong> endless scenarios — peaceful development or global domination.</li>
-      <li><strong>World Map Gameplay:</strong> true geopolitics sandbox on mobile.</li>
-    </ul>
-
-    <h2>🛠️ How to Play 🛠️</h2>
-    <ul>
-      <li><strong>Choose your country:</strong> start in 1960, 1990, or 2025.</li>
-      <li><strong>Set your strategy:</strong> focus on diplomacy, economy, or conquest.</li>
-      <li><strong>Shape the world:</strong> become a regional power or global hegemon.</li>
-    </ul>
-
     <div class="social-section">
       <h2>Join the Community 🌍</h2>
-      <div class="social-grid">
 
+      <div class="social-grid">
         <a class="social-btn" href="https://discord.gg/V4qeD63Zx2" target="_blank" rel="noopener">
           <!-- Discord -->
-          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M20.317 4.369a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.078.037c-.211.375-.444.864-.608 1.249a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.249.077.077 0 0 0-.078-.037 19.736 19.736 0 0 0-4.885 1.515.07.07 0 0 0-.032.027C.533 9.045-.32 13.58.099 18.057a.082.082 0 0 0 .031.055 19.9 19.9 0 0 0 5.993 3.039.077.077 0 0 0 .084-.027c.462-.63.874-1.295 1.226-1.994a.076.076 0 0 0-.041-.105 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128c.126-.094.252-.192.372-.291a.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.061 0a.074.074 0 0 1 .078.009c.12.099.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.04.106c.36.699.772 1.364 1.225 1.993a.076.076 0 0 0 .084.028 19.84 19.84 0 0 0 6.002-3.039.077.077 0 0 0 .031-.055c.5-5.177-.838-9.673-3.548-13.66a.061.061 0 0 0-.031-.028zM8.02 15.331c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.418 2.157-2.418 1.21 0 2.176 1.094 2.157 2.418 0 1.334-.955 2.419-2.157 2.419zm7.975 0c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.418 2.157-2.418 1.21 0 2.176 1.094 2.157 2.418 0 1.334-.946 2.419-2.157 2.419z"/></svg>
+          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M20.317 4.369a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.078.037c-.211.375-.444.864-.608 1.249a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.249.077.077 0 0 0-.078-.037 19.736 19.791 0 0 0-4.885 1.515.07.07 0 0 0-.032.027C.533 9.045-.32 13.58.099 18.057a.082.082 0 0 0 .031.055 19.9 19.9 0 0 0 5.993 3.039.077.077 0 0 0 .084-.027c.462-.63.874-1.295 1.226-1.994a.076.076 0 0 0-.041-.105 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128c.126-.094.252-.192.372-.291a.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.061 0a.074.074 0 0 1 .078.009c.12.099.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.04.106c.36.699.772 1.364 1.225 1.993a.076.076 0 0 0 .084.028 19.84 19.84 0 0 0 6.002-3.039.077.077 0 0 0 .031-.055c.5-5.177-.838-9.673-3.548-13.66a.061.061 0 0 0-.031-.028z"/></svg>
           Discord
         </a>
 
@@ -357,22 +354,27 @@
           Facebook
         </a>
 
-        <a class="social-btn" href="#" target="_blank" rel="noopener">
+        <a class="social-btn" href="https://www.reddit.com/r/HegemonGame/" target="_blank" rel="noopener">
           <!-- Reddit -->
-          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12zm-4.35.18c.02-.24.03-.49.03-.74 0-.25-.01-.5-.03-.74.63-.25 1.08-.86 1.08-1.58 0-.94-.76-1.7-1.7-1.7-.62 0-1.16.33-1.46.83-1.24-.86-2.98-1.41-4.96-1.49l.84-3.95 2.74.58c.08.73.7 1.3 1.45 1.3.81 0 1.47-.66 1.47-1.47S18.51 1.2 17.7 1.2c-.58 0-1.08.34-1.31.83l-3.13-.66c-.31-.07-.62.14-.69.45l-1.04 4.9c-2 .06-3.76.61-5.01 1.49-.3-.5-.84-.83-1.46-.83-.94 0-1.7.76-1.7 1.7 0 .72.45 1.33 1.08 1.58-.02.24-.03.49-.03.74 0 .25.01.5.03.74-.63.25-1.08.86-1.08 1.58 0 .94.76 1.7 1.7 1.7.62 0 1.16-.33 1.46-.83 1.29.91 3.11 1.48 5.19 1.48s3.9-.57 5.19-1.48c.3.5.84.83 1.46.83.94 0 1.7-.76 1.7-1.7 0-.72-.45-1.33-1.08-1.58zM8.4 11.1c.77 0 1.4.63 1.4 1.4s-.63 1.4-1.4 1.4S7 13.27 7 12.5s.63-1.4 1.4-1.4zm7.2 0c.77 0 1.4.63 1.4 1.4s-.63 1.4-1.4 1.4-1.4-.63-1.4-1.4.63-1.4 1.4-1.4zM8.8 16.2c.93.93 2.31 1.45 3.2 1.45s2.27-.52 3.2-1.45c.19-.19.19-.5 0-.69-.19-.19-.5-.19-.69 0-.71.71-1.74 1.14-2.51 1.14s-1.8-.43-2.51-1.14c-.19-.19-.5-.19-.69 0-.19.19-.19.5 0 .69z"/></svg>
+          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12zm-4.35.18c.02-.24.03-.49.03-.74 0-.25-.01-.5-.03-.74.63-.25 1.08-.86 1.08-1.58 0-.94-.76-1.7-1.7-1.7-.62 0-1.16.33-1.46.83-1.24-.86-2.98-1.41-4.96-1.49l.84-3.95 2.74.58c.08.73.7 1.3 1.45 1.3.81 0 1.47-.66 1.47-1.47S18.51 1.2 17.7 1.2c-.58 0-1.08.34-1.31.83l-3.13-.66c-.31-.07-.62.14-.69.45l-1.04 4.9c-2 .06-3.76.61-5.01 1.49-.3-.5-.84-.83-1.46-.83-.94 0-1.7.76-1.7 1.7 0 .72.45 1.33 1.08 1.58-.02.24-.03.49-.03.74 0 .25.01.5.03.74-.63.25-1.08.86-1.08 1.58 0 .94.76 1.7 1.7 1.7.62 0 1.16-.33 1.46-.83 1.29.91 3.11 1.48 5.19 1.48s3.9-.57 5.19-1.48c.3.5.84.83 1.46.83.94 0 1.7-.76 1.7-1.7 0-.72-.45-1.33-1.08-1.58z"/></svg>
           Reddit
         </a>
 
-        <a class="social-btn" href="#" target="_blank" rel="noopener">
-          <!-- Telegram -->
-          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M22.05 3.57c.35-.14.74-.07 1.02.18.28.25.4.63.31 1L20.2 20.3c-.07.38-.33.7-.68.86-.35.16-.76.12-1.07-.11l-5.66-4.13-2.73 2.64c-.22.21-.55.28-.84.17-.29-.11-.48-.38-.5-.69l-.27-4.72L18.1 6.2c.28-.2.35-.58.16-.86-.19-.28-.57-.37-.86-.2L6.31 12.1 1.9 10.64c-.36-.12-.62-.43-.67-.81-.05-.38.12-.76.44-.97L22.05 3.57z"/></svg>
-          Telegram
+        <a class="social-btn" href="https://www.tiktok.com/@hegemon.game" target="_blank" rel="noopener">
+          <!-- TikTok (simple icon) -->
+          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M17.5 3c.6 3.4 3 4.6 3 4.6V11c-1.6-.1-2.8-.6-3.8-1.3V16c0 3.6-2.7 6-6.2 6-3 0-5.5-2-6-4.9-.6-3.6 2.2-7 6.4-7v3.5c-1.7-.5-3.4.9-3.4 2.6 0 1.4 1.2 2.6 2.6 2.6 1.5 0 2.8-1.2 2.8-2.8V3h3.6z"/></svg>
+          TikTok
         </a>
 
+        <a class="social-btn" href="https://t.me/globalgenesis" target="_blank" rel="noopener">
+          <!-- Telegram -->
+          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M22.05 3.57c.35-.14.74-.07 1.02.18.28.25.4.63.31 1L20.2 20.3c-.07.38-.33.7-.68.86-.35.16-.76.12-1.07-.11l-5.66-4.13-2.73 2.64c-.22.21-.55.28-.84.17-.29-.11-.48-.38-.5-.69l-.27-4.72L18.1 6.2c.28-.2.35-.58.16-.86-.19-.28-.57-.37-.86-.2L6.31 12.1 1.9 10.64c-.36-.12-.62-.43-.67-.81-.05-.38.12-.76.44-.97L22.05 3.57z"/></svg>
+          Telegram (Ukr)
+        </a>
       </div>
 
       <p style="margin-top:14px;color:var(--muted);font-size:0.95em;">
-        Tip: keep one link everywhere → <a href="community.html">Hegemon Community Hub</a>
+        One link for everything → <a href="community.html">Hegemon Community Hub</a>
       </p>
     </div>
   </div>
