--- a/community.html
+++ b/community.html
@@ -3,105 +3,199 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hegemon Community Hub</title>
-  <link rel="icon" href="images/512gameIcon.png" type="image/png" />
+  <title>Hegemon – Community & Official Links</title>
+
+  <link rel="icon" href="images/MacArtur_Icon_512.jpg" type="image/jpeg" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Orbitron:wght@700&display=swap" rel="stylesheet">
+
   <style>
+    :root{
+      --bg:#2c3e50;
+      --panel:#34495e;
+      --btn:#2f4257;
+      --btnHover:#35506a;
+      --text:#ecf0f1;
+      --muted:#bdc3c7;
+      --accent:#f39c12;
+      --shadow:rgba(0,0,0,0.45);
+    }
+
     body{
       font-family:'Roboto', sans-serif;
-      margin:0; padding:0;
-      background:#2c3e50;
-      color:#ecf0f1;
+      margin:0;
+      padding:0;
+      background:var(--bg);
+      color:var(--text);
       min-height:100vh;
       display:flex;
       align-items:center;
       justify-content:center;
       text-align:center;
     }
+
     .card{
-      width:min(720px, 92vw);
-      background:#34495e;
-      border-radius:14px;
-      box-shadow:0 0 20px rgba(0,0,0,0.45);
-      padding:22px;
+      width:min(760px, 92vw);
+      background:var(--panel);
+      border-radius:16px;
+      box-shadow:0 0 22px var(--shadow);
+      padding:26px 22px 30px;
     }
+
+    img{
+      width:90px;
+      height:90px;
+      border-radius:20%;
+      border:3px solid var(--accent);
+      box-shadow:0 0 16px rgba(243,156,18,0.55);
+      margin-bottom:10px;
+      object-fit:cover;
+    }
+
     h1{
       font-family:'Orbitron', sans-serif;
-      margin:8px 0 6px;
-      color:#f39c12;
-      letter-spacing:0.5px;
+      margin:10px 0 6px;
+      color:var(--accent);
+      letter-spacing:0.6px;
     }
-    p{ color:#bdc3c7; margin:0 0 18px; }
+
+    p{
+      color:var(--muted);
+      margin:0 0 20px;
+      font-size:1.05em;
+    }
+
+    .section-title{
+      margin:26px 0 10px;
+      font-weight:800;
+      letter-spacing:0.4px;
+      color:#f1c40f;
+      text-transform:uppercase;
+      font-size:0.95em;
+    }
+
     .grid{
       display:flex;
       flex-wrap:wrap;
       gap:12px;
       justify-content:center;
-      margin-top:14px;
+      margin-top:12px;
     }
+
     .btn{
       display:inline-flex;
       align-items:center;
       justify-content:center;
       gap:10px;
-      min-width:220px;
-      padding:12px 16px;
-      border-radius:12px;
-      background:#2f4257;
+      min-width:240px;
+      padding:14px 18px;
+      border-radius:14px;
+      background:var(--btn);
       border:1px solid rgba(255,255,255,0.08);
-      color:#ecf0f1;
+      color:var(--text);
       text-decoration:none;
-      font-weight:800;
+      font-weight:900;
       transition:transform .18s ease, background-color .18s ease;
     }
-    .btn:hover{ transform:translateY(-2px); background:#35506a; }
-    .btn svg{ width:20px;height:20px;fill:currentColor;opacity:.95; }
-    .play{ background:#4285F4; border:none; }
-    .play:hover{ background:#3b76d9; }
-    .back{ display:inline-block;margin-top:16px;color:#3498db;font-weight:800;text-decoration:none; }
+
+    .btn:hover{
+      transform:translateY(-2px);
+      background:var(--btnHover);
+      text-decoration:none;
+    }
+
+    .btn small{
+      font-size:0.8em;
+      font-weight:700;
+      opacity:0.9;
+    }
+
+    .store-apple{ background:#000; }
+    .store-google{ background:#4285F4; }
+    .store-steam{ background:#1b2838; }
+    .store-apple:hover{ background:#222; }
+    .store-google:hover{ background:#3b76d9; }
+    .store-steam:hover{ background:#233447; }
+
+    .back{
+      display:inline-block;
+      margin-top:22px;
+      color:#3498db;
+      font-weight:800;
+      text-decoration:none;
+    }
     .back:hover{ text-decoration:underline; }
-    img{ width:82px;height:82px;border-radius:18%; border:2px solid #f39c12; box-shadow:0 0 14px rgba(243,156,18,0.5); }
+
+    @media (max-width:600px){
+      .btn{ width:92%; min-width:unset; }
+    }
   </style>
 </head>
+
 <body>
   <div class="card">
-    <img src="images/512gameIcon.png" alt="Hegemon Icon">
-    <h1>Hegemon Community Hub</h1>
-    <p>Choose your platform. One link for all communities.</p>
+    <img src="images/MacArtur_Icon_512.jpg" alt="Hegemon Game Icon">
+    <h1>HEGEMON</h1>
+    <p>Official links & community hub for the global grand strategy game</p>
 
+    <!-- STORES -->
+    <div class="section-title">Download the Game</div>
     <div class="grid">
-      <a class="btn play" href="https://play.google.com/store/apps/details?id=com.Zoroplay.GlobalGenesis" target="_blank" rel="noopener">
-        <span>Download on Google Play</span>
+      <a class="btn store-apple"
+         href="https://apps.apple.com/us/app/war-strategy-conflict-ww3/id6749019142"
+         target="_blank" rel="noopener">
+        App Store
       </a>
 
-      <a class="btn" href="https://discord.gg/V4qeD63Zx2" target="_blank" rel="noopener">
-        <!-- Discord -->
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M20.317 4.369a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.078.037c-.211.375-.444.864-.608 1.249a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.249.077.077 0 0 0-.078-.037 19.736 19.736 0 0 0-4.885 1.515.07.07 0 0 0-.032.027C.533 9.045-.32 13.58.099 18.057a.082.082 0 0 0 .031.055 19.9 19.9 0 0 0 5.993 3.039.077.077 0 0 0 .084-.027c.462-.63.874-1.295 1.226-1.994a.076.076 0 0 0-.041-.105 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128c.126-.094.252-.192.372-.291a.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.061 0a.074.074 0 0 1 .078.009c.12.099.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.04.106c.36.699.772 1.364 1.225 1.993a.076.076 0 0 0 .084.028 19.84 19.84 0 0 0 6.002-3.039.077.077 0 0 0 .031-.055c.5-5.177-.838-9.673-3.548-13.66a.061.061 0 0 0-.031-.028z"/></svg>
+      <a class="btn store-google"
+         href="https://play.google.com/store/apps/details?id=com.Zoroplay.GlobalGenesis"
+         target="_blank" rel="noopener">
+        Google Play
+      </a>
+
+      <a class="btn store-steam"
+         href="https://store.steampowered.com/"
+         target="_blank" rel="noopener">
+        Steam (Coming Soon)
+      </a>
+    </div>
+
+    <!-- COMMUNITY -->
+    <div class="section-title">Community & Media</div>
+    <div class="grid">
+      <a class="btn"
+         href="https://discord.gg/V4qeD63Zx2"
+         target="_blank" rel="noopener">
         Discord
       </a>
 
-      <a class="btn" href="https://www.youtube.com/@WarStrategyConflictWW3" target="_blank" rel="noopener">
-        <!-- YouTube -->
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M23.498 6.186a3.02 3.02 0 0 0-2.125-2.138C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.373.503A3.02 3.02 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.02 3.02 0 0 0 2.125 2.138c1.868.503 9.373.503 9.373.503s7.505 0 9.373-.503a3.02 3.02 0 0 0 2.125-2.138C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
+      <a class="btn"
+         href="https://www.youtube.com/@WarStrategyConflictWW3"
+         target="_blank" rel="noopener">
         YouTube
       </a>
 
-      <a class="btn" href="https://www.facebook.com/profile.php?id=100068772151616" target="_blank" rel="noopener">
-        <!-- Facebook -->
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M22.675 0h-21.35C.597 0 0 .597 0 1.326v21.348C0 23.403.597 24 1.326 24h11.494v-9.294H9.692V11.01h3.128V8.309c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.312h3.587l-.467 3.696h-3.12V24h6.116C23.403 24 24 23.403 24 22.674V1.326C24 .597 23.403 0 22.675 0z"/></svg>
+      <a class="btn"
+         href="https://www.facebook.com/profile.php?id=100068772151616"
+         target="_blank" rel="noopener">
         Facebook
       </a>
 
-      <a class="btn" href="#" target="_blank" rel="noopener">
-        <!-- Reddit -->
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z"/></svg>
+      <a class="btn"
+         href="https://www.reddit.com/r/HegemonGame/"
+         target="_blank" rel="noopener">
         Reddit
       </a>
 
-      <a class="btn" href="#" target="_blank" rel="noopener">
-        <!-- Telegram -->
-        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M22.05 3.57c.35-.14.74-.07 1.02.18.28.25.4.63.31 1L20.2 20.3c-.07.38-.33.7-.68.86-.35.16-.76.12-1.07-.11l-5.66-4.13-2.73 2.64c-.22.21-.55.28-.84.17-.29-.11-.48-.38-.5-.69l-.27-4.72L18.1 6.2c.28-.2.35-.58.16-.86-.19-.28-.57-.37-.86-.2L6.31 12.1 1.9 10.64c-.36-.12-.62-.43-.67-.81-.05-.38.12-.76.44-.97L22.05 3.57z"/></svg>
-        Telegram
+      <a class="btn"
+         href="https://www.tiktok.com/@hegemon.game"
+         target="_blank" rel="noopener">
+        TikTok
+      </a>
+
+      <a class="btn"
+         href="https://t.me/globalgenesis"
+         target="_blank" rel="noopener">
+        Telegram (Ukr)
       </a>
     </div>
 
