--- a/community.html
+++ b/community.html
@@ -169,7 +169,7 @@
       </a>
 
       <a class="btn"
-         href="https://www.youtube.com/@WarStrategyConflictWW3"
+         href="https://www.youtube.com/@HegemonGame"
          target="_blank" rel="noopener">
         YouTube
       </a>
