--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
           Discord
         </a>
 
-        <a class="social-btn" href="https://www.youtube.com/@WarStrategyConflictWW3" target="_blank" rel="noopener">
+        <a class="social-btn" href="https://www.youtube.com/@HegemonGame" target="_blank" rel="noopener">
           <!-- YouTube -->
           <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M23.498 6.186a3.02 3.02 0 0 0-2.125-2.138C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.373.503A3.02 3.02 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.02 3.02 0 0 0 2.125 2.138c1.868.503 9.373.503 9.373.503s7.505 0 9.373-.503a3.02 3.02 0 0 0 2.125-2.138C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
           YouTube
